--- a/src/main/resources/fxml/MainWindow.fxml
+++ b/src/main/resources/fxml/MainWindow.fxml
@@ -123,6 +123,7 @@
                   <Button fx:id="about_button" mnemonicParsing="false" onAction="#openAbout" text="About" />
                   <Button fx:id="start_button" mnemonicParsing="false" onAction="#start" text="Start!" />
                   <Button fx:id="cancel_button" disable="true" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
+                  <Button fx:id="report_button" mnemonicParsing="false" onAction="#report" text="Report" />
                </children>
                <padding>
                   <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
