--- a/src/main/resources/fxml/SurveyInfoEditor.fxml
+++ b/src/main/resources/fxml/SurveyInfoEditor.fxml
@@ -139,7 +139,12 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </HBox>
-      <Button fx:id="submit_button" mnemonicParsing="false" text="Submit" />
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+         <children>
+            <Button fx:id="submit_button" mnemonicParsing="false" text="Submit" />
+            <Button fx:id="save_button" mnemonicParsing="false" onAction="#save" text="SAVE" />
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
